# fastapi-base

./: .gitignore  Dockerfile-backend-local  Makefile  README.md  docker-compose-local.yml
backend/: .pylintrc  Makefile  pyproject.toml
backend/application/: main.py
backend/application/api/api_v1/: api.py
backend/application/core/: config.py  exceptions.py  logging.py
backend/application/docs/: docs.py
