[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "fastapi-base"
package-mode = false
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
fastapi = "^0.115.2"
pydantic = "^2.9.2"
python = "^3.13"
uvicorn = "^0.32.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
colorama = "^0.4.6"
isort = "^5.13.2"
mypy = "^1.12.0"
pylint = "^3.3.1"
pylint-pydantic = "^0.3.2"
pytest = "^8.3.3"

[tool.black]
line-length = 79

[tool.isort]
force_single_line = false
line_length = 79
lines_after_imports = 2
profile = "black"

[tool.mypy]
color_output = true
disable_error_code = "valid-type"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
pretty = true
python_version = "3.13"
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
